k8s/clusters/cluster-0/manifests/home-automation/octoprint/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: octoprint
  namespace: home-automation
spec:
  type: ExternalName
  externalName: octopi.${HARDWARE_DOMAIN}
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
