k8s/clusters/cluster-0/manifests/home-automation/octoprint/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: ingress.bjw-s.dev
    traefik.frontend.passHostHeader: "false"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: network-rfc1918-ips@kubernetescrd
  name: octoprint
  namespace: home-automation
spec:
  ingressClassName: traefik
  rules:
    - host: octoprint.${INGRESS_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: octoprint
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - octoprint.${INGRESS_DOMAIN}
      secretName: tls.octoprint
